fix: navbar item size and spacing

--- a/retail-cart/src/app/components/cart-dropdown/cart-dropdown.component.html
+++ b/retail-cart/src/app/components/cart-dropdown/cart-dropdown.component.html
@@ -1,5 +1,5 @@
 <!-- Cart Icon with Click Event -->
-<button class="relative" (click)="toggleCart()">
+<button class="relative text-3xl" (click)="toggleCart()">
   🛒
   @if (cart.length) {
   <span class="absolute -top-1 -right-2 bg-red-500 text-white text-xs size-4 rounded-full">
@@ -9,7 +9,7 @@
 </button>
 
 <!-- Cart Dropdown -->
-<div *ngIf="isCartOpen" class="absolute right-0 top-12 w-80 z-30 bg-white shadow-lg rounded-lg p-4">
+<div *ngIf="isCartOpen" class="absolute  right-0 lg:right-40 top-12 w-80 z-30 bg-white shadow-lg rounded-lg p-4">
   <h2 class="text-lg font-bold mb-2">Cart Summary</h2>
 
   <div *ngIf="cart.length > 0; else emptyCart">
