--- a/retail-cart/src/app/components/navbar/navbar.component.html
+++ b/retail-cart/src/app/components/navbar/navbar.component.html
@@ -1,22 +1,27 @@
-<nav class="flex justify-between items-center p-4 bg-white shadow-md">
-  <!-- Logo -->
-  <div class="text-xl font-bold">Exclusive</div>
+<nav class="bg-white shadow-md h-20">
+  <div class="container mx-auto h-full w-full">
+    <div class="flex justify-between h-full w-full px-3 lg:px-0 items-center">
+      <div class="text-xl font-bold">Exclusive</div>
 
-  <!-- Menu -->
-  <ul class="hidden md:flex space-x-6 text-black">
-    <li class="hover:underline"><a href="#">Home</a></li>
-  </ul>
+      <!-- Menu -->
+      <ul class="hidden md:flex space-x-6 text-black">
+        <li class="hover:underline"><a href="#">Home</a></li>
+      </ul>
 
-  <!-- Icons -->
-  <div class="flex space-x-4 items-center">
-    <app-cart-dropdown></app-cart-dropdown>
-    <button class="md:hidden" (click)="toggleMenu()">☰</button>
+      <!-- Icons -->
+      <div class="flex space-x-4 gap-3 items-center">
+        <app-cart-dropdown></app-cart-dropdown>
+        <button class="md:hidden" (click)="toggleMenu()">☰</button>
+      </div>
+
+      <!-- Mobile Menu Button -->
+
+      <!-- Mobile Menu -->
+      <ul *ngIf="isMenuOpen" class="absolute top-16 left-0 w-full z-30  bg-white shadow-md p-4 space-y-4 md:hidden">
+        <li class="hover:underline"><a href="#">Home</a></li>
+      </ul>
+
+    </div>
   </div>
-
-  <!-- Mobile Menu Button -->
-
-  <!-- Mobile Menu -->
-  <ul *ngIf="isMenuOpen" class="absolute top-16 left-0 w-full z-30  bg-white shadow-md p-4 space-y-4 md:hidden">
-    <li class="hover:underline"><a href="#">Home</a></li>
-  </ul>
+  <!-- Logo -->
 </nav>
