--- a/retail-cart/src/app/features/home/home.component.html
+++ b/retail-cart/src/app/features/home/home.component.html
@@ -1,1 +1,4 @@
-<app-product-list></app-product-list>
+<app-navbar />
+<div class="container mx-auto p-4">
+  <app-product-list></app-product-list>
+</div>
